--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.main > div {
+  width: 47%;
+  border: 1px solid;
+  min-width: 400px;
+  margin: 20px 10px;
+  border: 0.3px solid #4040401f;
+  border-radius: 3px;
+  box-shadow: 1px 2px 3px #8080801f;
+  height: 400px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 380px) {
+  .main > div {
+    width: 90%;
+    border: 1px solid;
+    min-width: 300px;
+    margin: 20px 10px;
+    border: 0.3px solid #4040401f;
+    border-radius: 3px;
+    box-shadow: 1px 2px 3px #8080801f;
   }
 }
