--- a/src/components/Chats/Chats.module.css
+++ b/src/components/Chats/Chats.module.css
@@ -16,7 +16,10 @@
   padding: 10px;
   min-height: 330px;
   max-height: 330px;
-  overflow-y: scroll;
+
+  overflow: auto;
+  display: flex;
+  flex-direction: column-reverse;
   border-bottom: 1px solid rgba(128, 128, 128, 0.356);
 }
 
